ANSKModel class now draw the model. There are still a couple of indice bugs, however they will be fixed. Pushing so the drawing and animating can be seen.

--- a/AnimationExample/ModelAnimationLibrary/ModelAnimationLibrary.csproj
+++ b/AnimationExample/ModelAnimationLibrary/ModelAnimationLibrary.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ANSKTagData.cs" />
     <Compile Include="ANSKVertexDeclaration.cs" />
     <Compile Include="BlendShape.cs" />
+    <Compile Include="DebugShapeRenderer.cs" />
     <Compile Include="ShaderVars\float4.cs" />
     <Compile Include="ShaderVars\int4.cs" />
     <Compile Include="Joint.cs" />
